Fix stylesheet for overlaps (confidence)

--- a/variantgrid/static_files/default_static/css/global_bs.scss
+++ b/variantgrid/static_files/default_static/css/global_bs.scss
@@ -927,15 +927,13 @@ ul.compact {
 .overlap-discordant {
     background-color: #ebb;
 }
-
 .overlap-concordant_agreement, .overlap-concordant_agreement_diff_vus {
     background-color: #88dd88;
 }
 
-.overlap-confidence {
+.overlap-concordant_confidence {
     background-color: #44bb44;
 }
-
 .overlap-single_submission, .overlap-no_entries {
     background-color: #ccc;
 }
